Change nb metadata

--- a/sample_notebook.ipynb
+++ b/sample_notebook.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import altair as alt"
+    "import altair as alt\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -29,10 +29,10 @@
    "outputs": [],
    "source": [
     "data = [\n",
-    "    {'name': 'Bob', 'animal': 'cat', 'number': 3},\n",
-    "    {'name': 'Bob', 'animal': 'dog', 'number': 1},\n",
-    "    {'name': 'Jan', 'animal': 'cat', 'number': 0},\n",
-    "    {'name': 'Jan', 'animal': 'dog', 'number': 2}\n",
+    "    {\"name\": \"Bob\", \"animal\": \"cat\", \"number\": 3},\n",
+    "    {\"name\": \"Bob\", \"animal\": \"dog\", \"number\": 1},\n",
+    "    {\"name\": \"Jan\", \"animal\": \"cat\", \"number\": 0},\n",
+    "    {\"name\": \"Jan\", \"animal\": \"dog\", \"number\": 2},\n",
     "]"
    ]
   },
@@ -185,11 +185,7 @@
     }
    ],
    "source": [
-    "alt.Chart(df).mark_bar().encode(\n",
-    "    x='name:N',\n",
-    "    y='number:Q',\n",
-    "    color='animal:N'\n",
-    ")"
+    "alt.Chart(df).mark_bar().encode(x=\"name:N\", y=\"number:Q\", color=\"animal:N\")"
    ]
   },
   {
@@ -204,8 +200,7 @@
   }
  ],
  "metadata": {
-  "title": "This is a sample notebook",
-  "description": "This notebook explores a fictional sample of pet ownership.",
+  "description": "This notebook explores a small sample of pet ownership.",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -221,8 +216,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  }
+   "version": "3.8.12"
+  },
+  "title": "This is my very first notebook"
  },
  "nbformat": 4,
  "nbformat_minor": 5
