Add new notebook

--- a/pet-ownership.ipynb
+++ b/pet-ownership.ipynb
@@ -200,6 +200,12 @@
   }
  ],
  "metadata": {
+  "creators": [
+   {
+    "name": "Pig, Guinea",
+    "orcid": "0000-0000-0000-0001"
+   }
+  ],
   "description": "This notebook explores a small sample of pet ownership.",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
